@@ -1,5 +1,6 @@
 This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.
 
+Add ability to toggle versioning of Resources or element types through system settings.
 Add ability to revert Resources.
 Add Dutch translation (Thanks @Engelbert!)
 Add new "Template Variables" tab to component. (Thanks Adam!)
